[project]
name = "comfyui-advanced-camera-prompts"
description = "Advanced camera control prompt generator for ComfyUI that reads camera information from 3D nodes and generates precise, professional camera control prompts."
version = "1.0.0"
license = {file = "LICENSE"}
authors = [
    {name = "Jianghong Zhu"}
] 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

[project.urls]
Repository = "https://github.com/jandan520/ComfyUI-AdvancedCameraPrompts"
Documentation = "https://github.com/jandan520/ComfyUI-AdvancedCameraPrompts"
"Bug Tracker" = "https://github.com/jandan520/ComfyUI-AdvancedCameraPrompts/issues"

[tool.comfy]
PublisherId = "jianghong-zhu"
DisplayName = "ComfyUI-AdvancedCameraPrompts"
Icon = ""
includes = []
# "requires-comfyui" = ">=1.0.0"
